--- a/index.css
+++ b/index.css
@@ -298,7 +298,7 @@
 body  {
   height: 100vh;
   width: 100vw;
-  color;
+  color: white;
   background-color: #4c4c4f;
   display: flex;
   align-items: center;
